--- a/CarREST/pom.xml
+++ b/CarREST/pom.xml
@@ -94,6 +94,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.15.2</version>
+        </dependency>
     </dependencies>
 
     <build>
